<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/button_createUser"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickCreateExam"
                android:text="@string/CreateExam" />

            <Button
                android:id="@+id/button_allExams"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickAllExams"
                android:text="@string/MyExam" />

        </LinearLayout>

        <Button
            android:id="@+id/button_back"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|left"
            android:layout_margin="10dp"
            android:onClick="onClickReturn"
            android:text="@string/back"
            tools:ignore="MissingConstraints" />
    </FrameLayout>

</RelativeLayout>