<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="Главное меню адиминистратора"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/button_createUser"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/CreateUser"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_allUsers"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/AllUsers" />

        </LinearLayout>

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="10dp"
            android:text="@string/back"
            tools:ignore="MissingConstraints" />

    </FrameLayout>

</RelativeLayout>