<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_margin="10dp"
                android:onClick="onClickReturn"
                android:text="@string/back"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickReturn"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/exam_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/purple_500"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:text="@string/exam_name"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/purple_500"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_isActiv"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:onClick="onClickReturn"
                        android:text="@string/makeActiv"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/button_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_weight="1"
                        android:onClick="onClickReturn"
                        android:text="@string/delete"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/button_export"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:onClick="onClickReturn"
                        android:text="@string/export"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/button_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:onClick="onClickReturn"
                        android:text="@string/edit"
                        android:textSize="12sp" />

                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/line2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/Subject"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/subject_name"
                                android:layout_width="196dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/style_btn_black20"
                                android:padding="10dp"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/line3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/question_count"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/question_count"
                                android:layout_width="196dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/style_btn_black20"
                                android:padding="10dp"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/line1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/distribution"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/distribution"
                                android:layout_width="196dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/style_btn_black20"
                                android:padding="10dp"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="160dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                android:text="@string/activity"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/Is_Activ"
                                android:layout_width="196dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="10dp"
                                android:layout_weight="1"
                                android:background="@drawable/style_btn_black20"
                                android:padding="10dp"
                                android:text="@string/is_Activ"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>