<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/purple_500"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingLeft="15dp"
                    android:text="@string/points"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/question_points"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/btn_stroke_white_press_blue"
                    android:gravity="clip_horizontal|center|clip_vertical"
                    android:text="@string/question_points"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/question_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|right"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center|right"
                    android:paddingRight="50dp"
                    android:text="@string/question1"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_margin="10dp"
                android:background="@drawable/style_btn_black20">

                <TextView
                    android:id="@+id/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/st_question"
                    android:textSize="18sp" />

            </FrameLayout>

            <ScrollView
                android:id="@+id/ansvers"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/answer1_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/style_btn_black20">

                        <TextView
                            android:id="@+id/answer1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="70dp"
                            android:padding="10dp"
                            android:text="@string/st_answer1"
                            android:textSize="18sp" />

                        <Switch
                            android:id="@+id/answer1_true_false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_stroke_white_press_blue"
                            android:backgroundTintMode="multiply" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/answer2_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/style_btn_black20">

                        <TextView
                            android:id="@+id/answer2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="70dp"
                            android:padding="10dp"
                            android:text="@string/st_answer2"
                            android:textSize="18sp" />

                        <Switch
                            android:id="@+id/answer2_true_false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_stroke_white_press_blue"
                            android:backgroundTintMode="multiply" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/answer3_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/style_btn_black20">

                        <TextView
                            android:id="@+id/answer3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="70dp"
                            android:padding="10dp"
                            android:text="@string/st_answer3"
                            android:textSize="18sp" />

                        <Switch
                            android:id="@+id/answer3_true_false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_stroke_white_press_blue"
                            android:backgroundTintMode="multiply" />
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/answer4_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/style_btn_black20">

                        <TextView
                            android:id="@+id/answer4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="70dp"
                            android:padding="10dp"
                            android:text="@string/st_answer4"
                            android:textSize="18sp" />

                        <Switch
                            android:id="@+id/answer4_true_false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|right"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/btn_stroke_white_press_blue"
                            android:backgroundTintMode="multiply" />
                    </FrameLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="100dp"
                android:layout_weight="1"
                android:onClick="onClickReturn"
                android:text="@string/back" />

            <Button
                android:id="@+id/button_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:onClick="onClickReturn"
                android:text="вперед" />

        </LinearLayout>
    </FrameLayout>

</RelativeLayout>